# Conflict_score_validator

./: .gitignore  Automated Conflict Detection and Scientific Validation: Three Institutional Scenarios  LICENSE  METIS_EKP_FORMAL_SPEC.md  README.md  conflict_validator_structure  pyproject.toml  sentinel_dcs_system.py  setup.cfg
.github/workflows/: ci.yml
artifacts/: empirical_validation_report.json
docs/: api.md  architecture.md
scripts/: run_simulation.py  run_verification.py
src/dcs_validator/: __init__.py
src/dcs_validator/certification/: formal.py  statistical.py
src/dcs_validator/conflict/: energy.py  mis.py
src/dcs_validator/core/: __init__.py  blob.py  field.py  invariant.py
src/dcs_validator/metis/: meta_bandit.py  operators.py
src/dcs_validator/safety/: deepfreeze.py  monitor.py
src/dcs_validator/topology/: persistent.py  separatrix.py
src/dcs_validator/utils/: hash.py  platform.py
tests/: test_sentinel_dcs_system.py
tests/integration/: test_pipeline.py
tests/unit/: test_blob.py  test_field.py  test_invariant.py
